# funjava

./: Dockerfile  README.md  pom.xml
fjcli/: .gitignore  README.md  pyproject.toml
fjcli/src/fjcli/: __main__.py
src/main/java/com/okdevtv/java/funjava/: FunjavaApplication.java  WordController.java  Words.java
src/main/resources/templates/: index.html  index2.html
src/test/java/com/okdevtv/java/funjava/: WordsApplicationTests.java
